# real_time_system

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  REPORT.md
benches/: component_a_bench.rs  component_b_bench.rs  latency_bench.rs  pipeline_bench.rs  sync_bench.rs  sync_contention_bench.rs
demo/: RUNBOOK.md
logs/: README.md
report/: RTS2601_Report.md  refs.bib
scripts/: analyze_logs.py
src/: alloc_counter.rs  lib.rs  main.rs  metrics.rs  types.rs
src/advanced/: async_pipeline.rs  cpu_load.rs  dashboard.rs  mod.rs
src/component_a/: async_pipeline.rs  mod.rs  processor.rs  sensor.rs  sync_manager.rs  threaded_pipeline.rs  transmitter.rs
src/component_b/: actuator.rs  controller.rs  hot_path.rs  mod.rs  receiver.rs  zero_copy_parser.rs
src/component_c/: mod.rs  priority_scheduler.rs
src/component_d/: leaderboard.rs  mod.rs  sync_benchmark.rs
src/component_e/: fail_safe.rs  mod.rs  watchdog.rs
src/ingestion/: mock_stream.rs  mod.rs  sse_client.rs
